implemented algorithm and fixed more styling :love_hotel: /play sexyback

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	</head>
 	<body>
 		<div id="main">
-			<nav id="nav-bar"><span id="logo">facebook</span>
-			<a href="instructions.html">Instructions</a></nav>
+			<nav id="nav-bar">
+				<span id="logo">facebook</span>
+				<a id="instructions" href="instructions.html">Instructions</a>
+			</nav>
 			<aside id="hour-labels">
 				<ol id="hours">
 					<li class="hour">
@@ -139,17 +141,9 @@
 				
 			</aside>
 			<div id="calendar">
-				<div class="event">
-					<h2 class="event-title">Sample Item</h2>
-					<h3 class="event-location">Sample Location</h3>
-				</div>
-				<div class="event">
-					<h2 class="event-title">Sample Item</h2>
-					<h3 class="event-location">Sample Location</h3>
-				</div>
-			
+
 			</div><!-- div #calendar-->
 		</div><!-- div #main-->
-		<script type="text/script" src="main.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html> 
